chg: fixing left-alignment of items vertically on the Incident page.  Changing the 'Read More' links to be anchor tags to facilitate a11y.

--- a/css/ucb-incident-page.css
+++ b/css/ucb-incident-page.css
@@ -248,6 +248,7 @@ p.ucb-toggle-update-body:hover{
   padding: 10px 10px 0 10px;
   font-size: 85%;
   overflow: hidden;
+  border-left: 15px solid white;
 }
 .alert-page-nav .col-updates {
   background: #fff;
@@ -259,6 +260,10 @@ p.ucb-toggle-update-body:hover{
 .col-updates > h1{
   font-size: 2em;
   margin: 0px;
+}
+
+.container.ucb-incident-container {
+  padding: 0;
 }
 
 .alert-page-nav.col-info{
